<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>decawave_driver</name>
  <version>0.0.0</version>
  <description>Decawave wrapper for ROS 2</description>
  <maintainer email="rezeck@dcc.ufmg.br">rezeck</maintainer>
  <author email="kopiotrek@gmail.com">Piotr Koczy</author>
  <author email="delicat.kuba@gmail.com">Piotr Koczy</author>
  <license>Apache License Version 2.0</license>

  <exec_depend>decawave_msgs</exec_depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
